Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-07-23 (SVN):
    * oslibs: added libmad and ogg/vorbis headers and static libraries
      for macosx.

2012-07-22 (SVN):
    * updated version date stamp to 2012-07-22.
    * updated documentation.

2012-07-22 (SVN):
    * Separated common unix and darwin sections in the makefiles.

2012-07-22 (SVN):
    * Fixed OSX gl linkage when we aren't dynamically linking to opengl
      functions at runtime. No need for -lm either.

2012-07-22 (SVN):
    * Added support for building the OSX versions usin gthe makefiles.
      Do not rely on sdl-config on OSX Framework builds and define new
      SDL_FRAMEWORK and NO_SDL_CONFIG preprocessor macros to indicate
      that and include SDL.h with the "SDL" subdirectory name included.

2012-07-22 (SVN):
    * Added new OSX midi driver based on SDL_mixer using CoreServices,
      added it to build and removed the old QuickTime code from build.
      As a bonus, this eliminates our dependency to Carbon stuff.

2012-07-22 (SVN):
    * Moved SDLMain.[m|h] from MacOSX subdir to under h2shared. Added
      SDLMain.o to SYSOBJ_SYS in the makefiles for (gl)h2 and (gl)hw.

2012-07-19 (SVN):
    * utils (LoadFile): don't use SafeMalloc() to avoid an unnecessary
      memset. reverted to using malloc() directly.

2012-07-19 (SVN):
    * utils, jsh2colour: removed unused GetFileSpace() and file globals.
      removed unnecessary check for extfile existence during arguments
      parsing, because ParseDefFile() already errors out if the file is
      not found.

2012-07-18 (SVN):
    * cl_demo.c (CL_PlayDemo_f): set key_dest to key_game only when the
      demo file is successfully opened.

2012-07-18 (SVN):
    * cl_demo.c: for a command like "record demoname map [track]", don't
      continue if the map cannot be started. do not continue if the demo
      file cannot be opened for the timedemo command.

2012-07-18 (SVN):